@@ -113,6 +113,11 @@ function ss_fping($hostname = '', $ping_sweeps = 6, $ping_type = 'ICMP', $port =
 
 			break;
 		}
+
+		if ($failed_results > $ping_sweeps / 4) {
+			$ping_sweeps = $failed_results;
+			break;
+		}
 	}
 
 	if ($failed_results == $ping_sweeps) {
@@ -127,6 +132,7 @@ function ss_fping($hostname = '', $ping_sweeps = 6, $ping_type = 'ICMP', $port =
 		foreach ($time as $sample) {
 			$predev += pow(($sample - $avg),2);
 		}
+
 		$dev = sqrt($predev / cacti_count($time));
 
 		return sprintf('min:%0.4f avg:%0.4f max:%0.4f dev:%0.4f loss:%0.4f', $min, $avg, $max, $dev, $loss);
